syntax = "proto2";

package sf.solana.transaction_stats.v1;

message Output {
  repeated TransactionStats data = 1;
}

message TransactionStats {
  required uint64 block_slot = 1;
  required string block_date = 2;
  required uint64 fee = 3;
  required string id = 4;
  required bool success = 5;
  repeated Instruction instructions = 6;
  required string version = 7;
  required uint32 base_fee = 8;
  required uint32 priority_fee = 9;
  required uint64 compute_units_consumed = 10;
  required uint64 compute_units_allocated = 11;
  required uint32 byte_size = 12;
  required uint32 trx_accounts_size = 13;
  required uint32 writable_alt_accounts_size = 14;
  required uint32 readable_alt_accounts_size = 15;
  required bool logs_truncated = 16;
  required uint32 signatures_size = 17;

}


message Instruction {
  required string executing_account = 1;
  required uint32 bytes = 2;
  required uint32 account_bytes = 3;
  required uint32 data_bytes = 4;

}


